dataset1235/2025-2/2868285114/users/756942405/executions/3649835072_48684178.log
== SUBMISSION (2025-08-21 22:30:00)
-- CODE: 
valor = float(input("Valor: "))
lucro = valor  * (30/100)
print(round(lucro, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
Valor: 435.86
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
Valor: 210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
Valor: 60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
Valor: 135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
Valor: 165.31
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
Valor: 568.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 22:29:53)
-- CODE: 
valor = float(input("Valor: "))
lucro = valor  * (30/100)
print(round(lucro, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
Valor: 435.86
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
Valor: 210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
Valor: 60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
Valor: 135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
Valor: 165.31
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
Valor: 568.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 22:29:48)
-- CODE: 
valor = float(input("Valor: "))
lucro = valor + * (30/100)
print(round(lucro, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 2
    lucro = valor + * (30/100)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 2
    lucro = valor + * (30/100)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 2
    lucro = valor + * (30/100)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 2
    lucro = valor + * (30/100)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 2
    lucro = valor + * (30/100)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 2
    lucro = valor + * (30/100)
                    ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 22:29:46)
-- CODE: 
valor = float(input("Valor: "))
lucro = valor + * (30/100)
print(round(lucro, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 2
    lucro = valor + * (30/100)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 2
    lucro = valor + * (30/100)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 2
    lucro = valor + * (30/100)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 2
    lucro = valor + * (30/100)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 2
    lucro = valor + * (30/100)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 2
    lucro = valor + * (30/100)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
